# openhelm

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  opencontrol.example.toml  opencontrol.minimal.example.toml  openhelm.example.toml  openhelm.minimal.example.toml
.github/workflows/: ci.yml
opencontrol/: Cargo.toml  opencontrol.example.toml
opencontrol-github/: Cargo.toml
opencontrol-github/src/: lib.rs
opencontrol-http/: Cargo.toml
opencontrol-http/src/: lib.rs
opencontrol-sdk/: Cargo.toml
opencontrol-sdk/src/: lib.rs
opencontrol/src/: log_buffer.rs  main.rs
opencontrol/src/ai/: client.rs  session.rs
opencontrol/src/config/: mod.rs
opencontrol/src/daemon/: mod.rs
opencontrol/src/ipc/: mod.rs
opencontrol/src/telegram/: mod.rs
opencontrol/src/tools/: fs.rs  mod.rs
openhelm/: Cargo.toml
openhelm-github/: Cargo.toml
openhelm-github/src/: lib.rs
openhelm-http/: Cargo.toml
openhelm-http/src/: lib.rs
openhelm-sdk/: Cargo.toml
openhelm/src/: main.rs
openhelm/src/ai/: client.rs  session.rs
openhelm/src/audit/: mod.rs
openhelm/src/config/: mod.rs
openhelm/src/daemon/: mod.rs
openhelm/src/ipc/: mod.rs
openhelm/src/permissions/: mod.rs
openhelm/src/telegram/: mod.rs
openhelm/src/tools/: fs.rs  mod.rs
src/: main.rs
src/ai/: client.rs  session.rs
src/audit/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/ipc/: mod.rs
src/permissions/: mod.rs
src/telegram/: mod.rs
src/tools/: fs.rs  mod.rs
