[package]
name = "opencontrol-github"
version = "0.1.0"
edition = "2021"

[dependencies]
opencontrol-sdk = { path = "../opencontrol-sdk" }

anyhow = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt"] }
