[package]
name = "openhelm-github"
description = "GitHub skill for openhelm: browse repos, issues, PRs, and files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["openhelm", "github", "ai", "bot", "skill"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
openhelm-sdk.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
octocrab.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
