[package]
name = "openhelm-http"
description = "HTTP skill for openhelm: GET, POST, PUT, PATCH, DELETE, HEAD"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["openhelm", "http", "ai", "bot", "skill"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[dependencies]
openhelm-sdk.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
toml.workspace = true
