[package]
name = "openhelm-sdk"
description = "Trait definitions and types for building openhelm skills and tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["openhelm", "ai", "bot", "plugin", "sdk"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
