[package]
name = "openhelm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openhelm"
path = "src/main.rs"

[dependencies]
openhelm-sdk = { path = "../openhelm-sdk" }
openhelm-github = { path = "../openhelm-github" }
openhelm-http = { path = "../openhelm-http" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# AI client
rig-core = "0.31"

# Crypto provider for rustls
rustls = "0.23"

# HTTP client (for OpenRouter)
reqwest = { version = "0.12", features = [
  "json",
], default-features = false, optional = true }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }
telegram-markdown-v2 = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.11"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Path canonicalization helper
dunce = "1"

# Base64 encoding (for image attachments)
base64 = "0.22"
