[package]
name = "openhelm"
description = "AI-powered Telegram bot and daemon with a configurable skill and tool system"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["openhelm", "ai", "telegram", "bot", "daemon"]
categories = ["command-line-utilities", "asynchronous"]

[[bin]]
name = "openhelm"
path = "src/main.rs"

[dependencies]
openhelm-sdk.workspace = true
openhelm-github.workspace = true
openhelm-http.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full"] }

# AI client
rig-core = "0.31"

# Crypto provider for rustls
rustls = "0.23"

# HTTP client (for OpenRouter)
reqwest = { workspace = true, optional = true }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }
telegram-markdown-v2 = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.11"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow.workspace = true
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait.workspace = true
futures = "0.3"
tokio-stream = "0.1"

# Path canonicalization helper
dunce = "1"

# Base64 encoding (for image attachments)
base64.workspace = true
